--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,6 +29,7 @@
 #bg{
     background: #3498db; /* For browsers that do not support gradients */
     background: linear-gradient(to bottom right, #8e44ad, #2980b9,#9b59b6); /* Standard syntax (must be last) */
+    background-repeat: repeat-y;
 }
 #padding1{
     padding-top: 80px;
